--- a/XsarilAI/XsarilAI.csproj
+++ b/XsarilAI/XsarilAI.csproj
@@ -17,6 +17,12 @@
     <None Update="AppConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\350208864525746186.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Guilds.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
