implement role gain handler

--- a/XsarilAI/XsarilAI.csproj
+++ b/XsarilAI/XsarilAI.csproj
@@ -23,6 +23,9 @@
     <None Update="Data\Guilds.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Data\JSRoleGainOptions.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
